--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Some awesome memory scheduler, client.",
   "main": "index.html",
   "scripts": {
-    "start": "(http-server . -p 8001 &) && (grunt && grunt watch)",
+    "start": "(http-server . -c-1 -o -p 8000 &) && (grunt && grunt watch)",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "user-agent": "samsteam-app-agent",
