--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
   },
   "homepage": "https://github.com/samsteam/samsteam.github.io#readme",
   "dependencies": {
-    "jquery": "^2.1.4",
     "angular": "^1.4.3",
+    "angular-translate": "^2.7.2",
     "angular-ui-router": "^0.2.15",
     "bootstrap": "^3.3.5",
+    "jquery": "^2.1.4",
     "sams": "0.0.*"
   },
   "devDependencies": {
