--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "angular-ui-router": "^0.2.15",
     "bootstrap": "^3.3.5",
     "jquery": "^2.1.4",
-    "sams": "^1.0.0"
+    "sams": "samsteam/sams-core"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
